--- a/en/studios/bourg/index.html
+++ b/en/studios/bourg/index.html
@@ -41,23 +41,18 @@
               <div class="caption__divider"></div>
             </div>
             <p class="article__text">
-              Our original location, the Bourg Studio, is located just off the iconic Place St. Francois. Find us down the cirwar ramp after Delices Cafe and next to goitar shop 
+              Our original location is located just off the iconic Place St. François. Find us down the circular ramp after Delices Cafe and next to the guitar shop
             </p>
             <ul class="icons">
               <li class="icons__item">
                 <p class="icons__text icons__text--is-towel">
-                  Towels-Product «Stop&nbsp;the&nbsp;water»
+                  Towels &ndash; Product &quot;;Stop the Water&quot;
                 </p>
                 <p class="icons__text icons__text--is-change">
                   Changing room
                 </p>
-              </li>
-              <li class="icons__item">
                 <p class="icons__text icons__text--is-shop">
-                  Shop
-                </p>
-                <p class="icons__text icons__text--is-spa">
-                  Spa-Shirin B
+                  Retail
                 </p>
               </li>
             </ul>
@@ -72,13 +67,14 @@
               <li class="shedule__item">
                 <p class="shedule__caption">Available</p>
                 <p class="shedule__text">Barre</p>
-                <p class="shedule__text">Try</p>
+                <p class="shedule__text">Trx</p>
                 <p class="shedule__text">Yoga</p>
               </li>
               <li class="shedule__item">
-                <p class="shedule__caption">One to one</p>
-                <p class="shedule__text">Private try</p>
-                <p class="shedule__text">Private Yoga</p>
+                <p class="shedule__caption">PRIVATES</p>
+                <p class="shedule__text">Barre</p>
+                <p class="shedule__text">Trx</p>
+                <p class="shedule__text">Yoga</p>
               </li>
             </ul>
             
@@ -101,7 +97,7 @@
               </li>
               <li class="shedule__item">
                 <p class="shedule__caption">Оpening hours</p>
-                <p class="shedule__text">Open 7 days week 30 mins prior and post schedule classes</p>
+                <p class="shedule__text">Open seven days a week, 20&nbsp;minutes prior and post scheduled classes</p>
               </li>
             </ul>
             
