--- a/en/studios/index.html
+++ b/en/studios/index.html
@@ -33,7 +33,7 @@
           </div>
           <h2 class="squares__title squares__title--is-medium">studios</h2>
           <p class="squares__text">
-            Our studios  equipped with the lasest technogym products, flattering lighing, and a cold  pressed juice bar. Don’t be scared, our classes are suitable for all levels.
+            A brand new kind of studio and it should feel different because it is different. From booking to showering, we set out to make your journey exciting and energising and the first step towards achieving your goals.
           </p>
           <a href="mailto:info@mix-studio.ch" class="squares__link">info@mix-studio.ch</a>
         </div>
@@ -51,7 +51,7 @@
           Bourg studio
         </h4>
         <p class="studios__address">
-          Rue de bourg 11 galerie de Bourg 1103 Lausanne
+          Rue de Bourg 11, 1003 Lausanne
         </p>
         <p class="studios__phone">
           +41 21 320 1041
@@ -83,7 +83,7 @@
           zurich studio
         </h4>
         <p class="studios__address">
-          Villa Egli Höschgasse 4 8008 Zurich
+          Villa Egli, Höschgasse 4, 8008 Zurich
         </p>
         <p class="studios__phone">
           +41 21 320 1041
