--- a/en/studios/zurich/index.html
+++ b/en/studios/zurich/index.html
@@ -41,7 +41,7 @@
               <div class="caption__divider"></div>
             </div>
             <p class="article__text">
-              Located in the historical Villa Egli which is situated directly on the lake of Zurich, next to the Pavillion le Corbusier.
+              Located in the historical Villa Egli, situated directly by the lake of Zurich next to the Pavillon Corbusier
             </p>
             <ul class="icons">
               <li class="icons__item">
@@ -81,7 +81,7 @@
               </li>
               <li class="shedule__item">
                 <p class="shedule__caption">Оpening hours</p>
-                <p class="shedule__text">Open 7 days week 30 mins prior and post schedule classes</p>
+                <p class="shedule__text">Open seven days a week, 20&nbsp;minutes prior and post scheduled classes.</p>
               </li>
             </ul>
             
