--- a/en/team/delmenico/index.html
+++ b/en/team/delmenico/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>MIX Studio | TEAM | Sheila Lutz</title>
+  <title>MIX Studio | TEAM | Sheila Delmenico</title>
   <link rel="stylesheet" href="../../../_assets/css/style.css">
 </head>
 <body>
@@ -30,20 +30,23 @@
   <!--<main class="c-article c-article--is-yoga">-->
   <main class="l-container">
     <div class="l-container__row">
-      <div class="l-container__column l-container__column--is-left l-container__column--is-team l-container__column--is-team-lutz">
+      <div class="l-container__column l-container__column--is-left l-container__column--is-team l-container__column--is-team-delmenico">
       </div>
       <div class="l-container__column l-container__column--is-right">
         <article class="article">
           <div class="article__wrapper">
             <div class="caption">
-              <h1 class="caption__title caption__title--is-left">Sheila Lutz</h1>
+              <h1 class="caption__title caption__title--is-left">Sheila Delmenico</h1>
               <div class="caption__divider"></div>
             </div>
             <p class="article__lead">
-              Shirin loves helping people make a difference to their lives and transferring as much positive energy on to them as possible. She not only brings the balance of mind and physical body to her classes but offers also, her therapeutic treatments and services at <span class="article__link">Shirin B.</span>  Her instant passion for barre came from searching for movement both physical and mental. Her desire to spread her knowledge led her to her certifications of MIX barre 2013, MIX trx and Strala Flow Yoga.
+              Originally from Ticino, Sheila moved to Lausanne in 2006 with the intention to learn French and to pursue her studies in nursing, obtaining a Bachelor’s degree in Nursing and a Diploma in Aromatherapy  This little powerhouse lights up the room but, don’t be fooled by her bright smile, you’ll work harder than you ever imagined!  Her focus on technique will allow you to be effortlessly in complete control of your positioning.  
             </p>
             <p class="article__lead">
-              You’ll find an uplifting class which motivates beginners and experienced through R&amp;B and club mixes, finding the right rhythm for everyone. Let her raise your energy flow!
+              As a former certified swimming instructor, she was seeking a new challenge to guide others to feel good about themselves and their body
+            </p>
+            <p class="article__lead">
+              She describes barre classes as a workout, accessible to everyone but, also a way to perfectly chisel your body and mental concentration.
             </p>
             <!--<div class="footer-menu__item footer-menu__item--is-social footer-menu__item--is-black">
               <a href="" class="footer-menu__social footer-menu__social--is-instagram "></a>
