--- a/en/team/index.html
+++ b/en/team/index.html
@@ -28,12 +28,12 @@
         <div class="squares__item"></div>
         <div class="squares__item">
           <div class="squares__title-wrapper">
-            <h2 class="squares__title">Talented</h2>
+            <h2 class="squares__title">The</h2>
             <div class="squares__divider"></div>
           </div>
           <h2 class="squares__title squares__title--is-medium">Team</h2>
           <p class="squares__text">
-            Fitness instructors organise exercise programmes to improve people's health and fitness. They're all uber certified, kind of fanny, and great in what they do.
+            Working out is our way of life.  Music is our inspiration.  We challenge you to strengthen not only your bodies but also your minds. We're about feeling good, igniting your passion and finding the fun in movement. 
           </p>
           <a href="../prices/" class="squares__button">book a class now</a>
         </div>
@@ -44,7 +44,7 @@
   <main class="c-team">
     
     <div class="caption">
-      <h3 class="caption__title caption__title--is-left">Our trainers</h3>
+      <h3 class="caption__title caption__title--is-left">OUR TEACHERS</h3>
       <div class="caption__divider"></div>
     </div>
     
@@ -55,7 +55,7 @@
         <div class="team__item js-trainer"><a href="chazot/" class="team__link"><p class="team__name">Celine</p><img src="../../_assets/img/_team/mix_team_chazot.jpg" alt="Celine Chazot" class="team__photo"></a></div>
         <div class="team__item js-trainer"><a href="garcia/" class="team__link"><p class="team__name">Raquel</p><img src="../../_assets/img/_team/mix_team_garcia.jpg" alt="Raquel Garcia" class="team__photo"></a></div>
         <div class="team__item js-trainer"><a href="laverde/" class="team__link"><p class="team__name">Daniela</p><img src="../../_assets/img/_team/mix_team_laverde.jpg" alt="Daniela Laverde" class="team__photo"></a></div>
-        <div class="team__item js-trainer"><a href="lutz/" class="team__link"><p class="team__name">Sheila</p><img src="../../_assets/img/_team/mix_team_lutz.jpg" alt="Sheila Lutz" class="team__photo"></a></div>
+        <div class="team__item js-trainer"><a href="delmenico/" class="team__link"><p class="team__name">Sheila</p><img src="../../_assets/img/_team/mix_team_lutz.jpg" alt="Sheila Lutz" class="team__photo"></a></div>020
         <div class="team__item js-trainer"><a href="pais/" class="team__link"><p class="team__name">João</p><img src="../../_assets/img/_team/mix_team_pais.jpg" alt="João Pais" class="team__photo"></a></div>
         <div class="team__item js-trainer"><a href="tetah/" class="team__link"><p class="team__name">Enora</p><img src="../../_assets/img/_team/mix_team_tetah.jpg" alt="Enora Tetah" class="team__photo"></a></div>
       </div>
