--- a/en/team/chazot/index.html
+++ b/en/team/chazot/index.html
@@ -40,7 +40,7 @@
               <div class="caption__divider"></div>
             </div>
             <p class="article__lead">
-              Technique, passion and high intensity are the best words to describe Celine. French and Swiss, she moved to Lausanne and professionally joined Bejart Ballet for eight years and later obtained her Certification as Classical Ballet Teacher.   By starting a family and becoming a mother she expanded her expertise to include Certifications in Pre and Post Natal Pilates Matwork. Celine is also a Certified MIX barre and MIX trx teacher. As a professional dancer Celine knows how to engage your core, keep you focusing hard on form and push you further than you believed you could go! Are you ready to discover your body’s new boundaries?
+              Technique, passion and high intensity are the best words to describe Celine. French and Swiss, she moved to Lausanne and professionally joined Bejart Ballet for eight years and later obtained her Certification as Classical Ballet Teacher. By starting a family and becoming a mother she expanded her expertise to include Certifications in Pre and Post Natal Pilates Matwork. Celine is also a Certified MIX barre and MIX TRX teacher. As a professional dancer Celine knows about engaging the core. She will keep you focusing hard on form and pushing you further than you believed you could go! Are you ready to discover your body’s new boundaries?
             </p>
             <!--<div class="footer-menu__item footer-menu__item--is-social footer-menu__item--is-black">
               <a href="" class="footer-menu__social footer-menu__social--is-instagram "></a>
