--- a/en/studios/bourg/index.html
+++ b/en/studios/bourg/index.html
@@ -65,16 +65,16 @@
             <h3 class="article__subhead">Classes</h3>
             <ul class="shedule">
               <li class="shedule__item">
-                <p class="shedule__caption">Available</p>
-                <p class="shedule__text">Barre</p>
-                <p class="shedule__text">Trx</p>
-                <p class="shedule__text">Yoga</p>
+                <p class="shedule__caption">AVAILABLE</p>
+                <p class="shedule__text">BARRE</p>
+                <p class="shedule__text">TRX</p>
+                <p class="shedule__text">YOGA</p>
               </li>
               <li class="shedule__item">
-                <p class="shedule__caption">PRIVATES</p>
-                <p class="shedule__text">Barre</p>
-                <p class="shedule__text">Trx</p>
-                <p class="shedule__text">Yoga</p>
+                <p class="shedule__caption">ONE TO ONE</p>
+                <p class="shedule__text">BARRE</p>
+                <p class="shedule__text">TRX</p>
+                <p class="shedule__text">YOGA</p>
               </li>
             </ul>
             
@@ -86,13 +86,13 @@
               </li>
               <li class="shedule__item">
                 <p class="shedule__caption">Studio manager</p>
-                <p class="shedule__text">Shirin Beram</p>
+                <p class="shedule__text">Alessandra Bessler</p>
               </li>
             </ul>
             <ul class="shedule">
               <li class="shedule__item">
                 <p class="shedule__caption">Adress</p>
-                <p class="shedule__text">Rue de bourg 11<br>galerie de Bourg 1103 Lausanne</p>
+                <p class="shedule__text">Rue de Bourg 11, 1003 Lausanne</p>
                 <p class="shedule__text"></p>
               </li>
               <li class="shedule__item">
