--- a/en/studios/index.html
+++ b/en/studios/index.html
@@ -35,7 +35,7 @@
           <p class="squares__text">
             A brand new kind of studio and it should feel different because it is different. From booking to showering, we set out to make your journey exciting and energising and the first step towards achieving your goals.
           </p>
-          <a href="mailto:info@mix-studio.ch" class="squares__link">info@mix-studio.ch</a>
+          <!--<a href="mailto:info@mix-studio.ch" class="squares__link">info@mix-studio.ch</a>-->
         </div>
       </div>
     </div>
