--- a/en/studios/bourg/index.html
+++ b/en/studios/bourg/index.html
@@ -41,7 +41,7 @@
               <div class="caption__divider"></div>
             </div>
             <p class="article__text">
-              Our original location is located just off the iconic Place St. François. Find us down the circular ramp after Delices Cafe and next to the guitar shop
+              Our original location is located just off the iconic Place St. François. Find us down the circular ramp after Delices Cafe and next to the guitar shop.
             </p>
             <ul class="icons">
               <li class="icons__item">
@@ -71,7 +71,7 @@
                 <p class="shedule__text">YOGA</p>
               </li>
               <li class="shedule__item">
-                <p class="shedule__caption">ONE TO ONE</p>
+                <p class="shedule__caption">PRIVATES</p>
                 <p class="shedule__text">BARRE</p>
                 <p class="shedule__text">TRX</p>
                 <p class="shedule__text">YOGA</p>
@@ -91,7 +91,7 @@
             </ul>
             <ul class="shedule">
               <li class="shedule__item">
-                <p class="shedule__caption">Adress</p>
+                <p class="shedule__caption">Address</p>
                 <p class="shedule__text">Rue de Bourg 11, 1003 Lausanne</p>
                 <p class="shedule__text"></p>
               </li>
