--- a/en/studios/zurich/index.html
+++ b/en/studios/zurich/index.html
@@ -41,7 +41,7 @@
               <div class="caption__divider"></div>
             </div>
             <p class="article__text">
-              Located in the historical Villa Egli, situated directly by the lake of Zurich next to the Pavillon Corbusier
+              Located in the historical Villa Egli, situated directly by the lake of Zurich next to the Pavillon Corbusier.
             </p>
             <ul class="icons">
               <li class="icons__item">
@@ -75,7 +75,7 @@
             </ul>
             <ul class="shedule">
               <li class="shedule__item">
-                <p class="shedule__caption">Adress</p>
+                <p class="shedule__caption">Address</p>
                 <p class="shedule__text">Villa Egli<br>Höschgasse 4<br>8008 Zurich</p>
                 <p class="shedule__text"></p>
               </li>
