--- a/en/classes/barre/index.html
+++ b/en/classes/barre/index.html
@@ -57,7 +57,7 @@
             <h3 class="article__subhead">
               barre advanced
             </h3>
-            <p class="article__lead">
+            <p class="article__text">
               The pace goes up another notch. This class is designed for those who have a full understanding of the fundamental barre positions You must have taken at least 20 open level MIX barre classes before taking an advanced level class, and be proficient at all of the basic positions as this class incorporates advanced positioning and longer sets, higher levels of intensity, and more creative variations.
             </p>
             <a href="https://clients.mindbodyonline.com/classic/ws?studioid=693381&stype=-98" class="article__button">SIGN UP</a>
