--- a/en/index.html
+++ b/en/index.html
@@ -26,26 +26,22 @@
     <div class="slider js-slider">
       <section class="slider__slide slider__slide--is-fourth js-slide">
         <div class="hero">
-          <h2 class="hero__caption">Your body&hellip; find your mix</h2>
-          <p class="hero__text">A fit, healthy body is the best fashion statement. We are here to guide you.</p>
+          <h2 class="hero__caption">BARRE</h2>
         </div>
       </section>
       <section class="slider__slide slider__slide--is-first js-slide">
         <div class="hero">
           <h2 class="hero__caption">TRX</h2>
-          <p class="hero__text">A fit, healthy body is the best fashion statement. We are here to guide you.</p>
         </div>
       </section>
       <section class="slider__slide slider__slide--is-yoga js-slide">
         <div class="hero">
-          <h2 class="hero__caption">Yoga</h2>
-          <p class="hero__text">A fit, healthy body is the best fashion statement. We are here to guide you.</p>
+          <h2 class="hero__caption">YOGA</h2>
         </div>
       </section>
       <section class="slider__slide slider__slide--is-third js-slide">
         <div class="hero">
-          <h2 class="hero__caption">Fuse</h2>
-          <p class="hero__text">A fit, healthy body is the best fashion statement. We are here to guide you.</p>
+          <h2 class="hero__caption">Your body&hellip; find&nbsp;your&nbsp;MIX</h2>
         </div>
       </section>
       
@@ -77,20 +73,17 @@
       <li class="programs__item">
         <a href="classes/barre/" class="programs__link programs__link--is-barre">
           <h4 class="programs__caption">Barre</h4>
-          <p class="programs__text">An amazing workout combining the best elements of ballet barre with pilates and flexibility training</p>
         </a>
       </li>
 
       <li class="programs__item">
         <a href="classes/trx/" class="programs__link programs__link--is-trx">
           <h4 class="programs__caption">Trx</h4>
-          <p class="programs__text">A fit, healthy body is the best fashion statement  We are here to guide you with this simple workout</p>
         </a>
       </li>
       <li class="programs__item">
         <a href="classes/yoga/" class="programs__link programs__link--is-yoga">
           <h4 class="programs__caption">Yoga</h4>
-          <p class="programs__text">Yoga is a group of physical, mental, and spiritual practices or disciplines </p>
         </a>
       </li>
       <li class="programs__item">
