--- a/en/team/index.html
+++ b/en/team/index.html
@@ -17,7 +17,7 @@
           <li class="menu__item"><a href="../studios/" class="menu__link ">Studios</a></li>
           <li class="menu__item"><a href="../prices/" class="menu__link">Prices</a></li>
           <li class="menu__item"><p class="menu__link menu__link--is-current">Team</p></li>
-          <li class="menu__item"><a href="https://mixstudio.blog/" class="menu__link">blog &ndash; Fuel</a></li>
+          <!--<li class="menu__item"><a href="https://mixstudio.blog/" class="menu__link">blog &ndash; Fuel</a></li>-->
 <!--          <li class="menu__item"><a href="../fr/team/" class="menu__link">Fr</a></li>-->
           <li class="menu__item menu__item--has-no-hover"><a href="https://clients.mindbodyonline.com/classic/ws?studioid=693381&stype=-98" class="menu__button">Login</a></li>
         </ul>
@@ -55,7 +55,7 @@
         <div class="team__item js-trainer"><a href="chazot/" class="team__link"><p class="team__name">Celine</p><img src="../../_assets/img/_team/mix_team_chazot.jpg" alt="Celine Chazot" class="team__photo"></a></div>
         <div class="team__item js-trainer"><a href="garcia/" class="team__link"><p class="team__name">Raquel</p><img src="../../_assets/img/_team/mix_team_garcia.jpg" alt="Raquel Garcia" class="team__photo"></a></div>
         <div class="team__item js-trainer"><a href="laverde/" class="team__link"><p class="team__name">Daniela</p><img src="../../_assets/img/_team/mix_team_laverde.jpg" alt="Daniela Laverde" class="team__photo"></a></div>
-        <div class="team__item js-trainer"><a href="delmenico/" class="team__link"><p class="team__name">Sheila</p><img src="../../_assets/img/_team/mix_team_lutz.jpg" alt="Sheila Lutz" class="team__photo"></a></div>020
+        <div class="team__item js-trainer"><a href="delmenico/" class="team__link"><p class="team__name">Sheila</p><img src="../../_assets/img/_team/mix_team_lutz.jpg" alt="Sheila Lutz" class="team__photo"></a></div>
         <div class="team__item js-trainer"><a href="pais/" class="team__link"><p class="team__name">João</p><img src="../../_assets/img/_team/mix_team_pais.jpg" alt="João Pais" class="team__photo"></a></div>
         <div class="team__item js-trainer"><a href="tetah/" class="team__link"><p class="team__name">Enora</p><img src="../../_assets/img/_team/mix_team_tetah.jpg" alt="Enora Tetah" class="team__photo"></a></div>
       </div>
