--- a/en/details/contact/popup.html
+++ b/en/details/contact/popup.html
@@ -3,10 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>MIX Studio | TEAM | Raquel Garcia</title>
+  <title>MIX Studio | CONTACT US</title>
   <link rel="stylesheet" href="../../../_assets/css/style.css">
 </head>
 <body>
+  <div class="popup popup--is-visible js-popup">
+    <div class="popup__frame">
+      <div class="caption caption--is-inside">
+          <div class="caption__wrapper">
+            <h2 class="caption__title caption__title--is-left">Thank</h2>
+            <div class="caption__divider"></div>
+          </div>
+          <h2 class="caption__title caption__title--is-left">you</h2>
+          
+      </div>
+      <p class="popup__text">Your message sent</p>
+      <p class="popup__button js-ok">
+        O.K.
+      </p>
+    </div>
+  </div>
   <header class="c-header c-header--is-black">
     <nav class="menu">
       <div class="menu__wrapper menu__wrapper--is-black">
@@ -18,63 +34,50 @@
           <li class="menu__item"><a href="../../prices/" class="menu__link">Prices</a></li>
           <li class="menu__item"><a href="../../team/" class="menu__link">Team</a></li>
           <!--<li class="menu__item"><a href="https://mixstudio.blog/" class="menu__link">blog &ndash; Fuel</a></li>-->
-          <!--<li class="menu__item"><a href="../../fr/" class="menu__link">Fr</a></li>-->
+          <!--<li class="menu__item"><a href="../../../fr/details/contact" class="menu__link">Fr</a></li>-->
           <li class="menu__item menu__item--has-no-hover"><a href="https://clients.mindbodyonline.com/classic/ws?studioid=693381&stype=-98" class="menu__button">Login</a></li>
         </ul>
       </div>
     </nav>
-    
   </header>
-  
-  
-  <!--<main class="c-article c-article--is-yoga">-->
   <main class="l-container">
     <div class="l-container__row">
-      <div class="l-container__column l-container__column--is-left l-container__column--is-team l-container__column--is-team-garcia">
+      <div class="l-container__column l-container__column--is-left">
+        <aside class="article article--is-left">
+          <p class="article__text">
+            <strong>GENERAL ENQUIRIES</strong>
+          </p>
+          <p class="article__text article__text--is-gray">
+            For any general enquiries give us a call, send us an email or visit us today.
+          </p>
+          <p class="article__text">
+            <strong>+41 21 320 1041</strong>
+          </p>
+          <p class="article__text">
+            <a href="mailto:info@mix-studio.ch" class="article__link">info@mix-studio.ch</a>
+          </p>
+        </aside>
       </div>
       <div class="l-container__column l-container__column--is-right">
-        <article class="article">
-          <div class="article__wrapper">
-            <div class="caption">
-              <h1 class="caption__title caption__title--is-left">Raquel Garcia</h1>
+        <article class="article article--is-right">
+          <div class="caption caption--is-inside">
+              <h2 class="caption__title caption__title--is-left">Contact us</h2>
               <div class="caption__divider"></div>
-            </div>
-            <p class="article__lead">
-              Raquel has been practicing Yoga for 10 years and her journey has helped her realize the power and influence that yoga has on individual lives.
-            </p>
-            <p class="article__lead">
-              The practice has totally changed her life, has empowered her to be happier, trust in herself and follow her dreams to reality. This is what she wants to share in each class; that yoga is much more than exercise and breathing techniques.  Yoga is a philosophy which give us tools and experience to apply off the mat in our daily lives!  She makes it accessible and sprinkles it with her fairy dust for a magical and transformative experience. 
-            </p>
-            <!--<div class="footer-menu__item footer-menu__item--is-social footer-menu__item--is-black">
-              <a href="" class="footer-menu__social footer-menu__social--is-instagram "></a>
-              <a href="" class="footer-menu__social footer-menu__social--is-fb"></a>
-            </div>
-            <h3 class="article__subhead">Upcoming classes</h3>
-            <ul class="shedule">
-              <li class="shedule__item">
-                <p class="shedule__type">Cycle</p>
-              </li>
-              <li class="shedule__item">
-                <p class="shedule__date">Sat 10:45AM</p>
-              </li>
-              <li class="shedule__item">
-                <p class="shedule__date">Sat 11:45AM</p>
-              </li>
-             <li class="shedule__item">
-                <p class="shedule__date">Mon 10:45</p>
-              </li>
-            </ul>
-            <h3 class="article__subhead">Favorite tracks</h3>
-            <ul class="spotify">
-              <li class="spotify__item"><img src="../../_assets/img/_team/_personal/angelina/Layer3.jpg" alt=""></li>
-              <li class="spotify__item"><img src="../../_assets/img/_team/_personal/angelina/Layer4.jpg" alt=""></li>
-              <li class="spotify__item"><img src="../../_assets/img/_team/_personal/angelina/Layer5.jpg" alt=""></li>
-              <li class="spotify__item"><img src="../../_assets/img/_team/_personal/angelina/Layer6.jpg" alt=""></li>
-            </ul>-->
           </div>
+          <p class="article__text">
+            A quick message is usually all we need to fix most issues.
+          </p>
+          <form class="article__form" method="post" action="message.php">
+            <input type="text" name="name" class="article__input js-input" required placeholder="Name">
+            <input type="email" name="email" class="article__input js-input" required placeholder="Email">
+            <input type="text" name="subject" class="article__input js-input" required placeholder="Subject">
+            <textarea rows="10" name="message" class="article__input article__input--is-textarea js-input" required placeholder="Quick message"></textarea>
+            <input type="submit" class="article__submit js-button" value="Send">
+            <input type="reset" class="article__reset" value="Cancel">
+          </form>
         </article>
       </div>
-    </div>
+    </div>  
   </main>
   
   
@@ -114,5 +117,6 @@
     </div>
   </footer>
   
+  <script src="../../../_assets/js/contact.js"></script>
 </body>
 </html>
