--- a/en/details/privacy/index.html
+++ b/en/details/privacy/index.html
@@ -17,7 +17,7 @@
           <li class="menu__item"><a href="../../studios/" class="menu__link">Studios</a></li>
           <li class="menu__item"><a href="../../prices/" class="menu__link">Prices</a></li>
           <li class="menu__item"><a href="../../team/" class="menu__link">Team</a></li>
-          <li class="menu__item"><a href="https://mixstudio.blog/" class="menu__link">blog &ndash; Fuel</a></li>
+          <!--<li class="menu__item"><a href="https://mixstudio.blog/" class="menu__link">blog &ndash; Fuel</a></li>-->
           <!--<li class="menu__item"><a href="../../../fr/details/privacy" class="menu__link">Fr</a></li>-->
           <li class="menu__item menu__item--has-no-hover"><a href="https://clients.mindbodyonline.com/classic/ws?studioid=693381&stype=-98" class="menu__button">Login</a></li>
         </ul>
